--- a/Developer/Views/Home/Show.cshtml
+++ b/Developer/Views/Home/Show.cshtml
@@ -1,302 +1,22 @@
 ﻿@using Developer.Helpers
 @using Developer.Models.EntityModels
-@model Developer.Models.ViewModels.ShowFlat
+@model Developer.Models.ViewModels.ShowAdvert
 
 
 @{
     ViewBag.Title = "Show";
 }
-<div class="row" style="margin-right: 15px">
-    <div class="col-md-12 custom-left-panel" style="margin-left: 15px">
-        <h4>@Model.Title</h4>
-        <h5>Mieszkanie</h5>
-        <div class="row">
-            <div class="col-md-7">
-                <div class="row">
-                    <div class="col-md-12">
-                        @{
-                            if (Model.Pictures == null || Model.Pictures.Count == 0)
-                            {
-                                <div style="text-align: center">Brak zdjęć</div>
-                            }
-                            else
-                            {
-                                <img src="\Content\Photos\@Model.Pictures[0].Link" style="width: 100%" />
-                            }
-                        }
-                    </div>
-                </div>
 
-            </div>
-            <div class="col-md-5" style="border-left: 1px solid #f39c12; border-radius: 10px">
-                <div class="list-group" style="margin-top: 20px">
-                    <div class="list-group-item-info" style="margin-bottom: 3px; padding-left: 15px">
-                        <div class="row" style="font-size: large">
-                            <div class="col-md-5">Typ oferty:</div>
-                            <div class="col-md-7">@(Model.ToLet ? "Wynajem" : "Sprzedaż")</div>
-                        </div>
-                    </div>
-                    @OwnHelpers.PropertyNotNull("Miasto", @Model.City)
-                    @OwnHelpers.PropertyNotNull("Lokalizacja", @Model.Location)
-                    @OwnHelpers.PropertyNotNull("Pow. całkowita", @Model.Area)
-                    @OwnHelpers.PropertyNotNull("Kondygnacja", @Model.Storey)
-                    @OwnHelpers.PropertyNotNull("Stan techniczny", @Model.TechnicalCondition)
-                    @OwnHelpers.PropertyNotNull("Liczba pokoi", @Model.Rooms)
-                    @OwnHelpers.PropertyNotNull("Ogrzewanie", @Model.Heating)
-                    @OwnHelpers.PropertyNotNull("Czynsz", @Model.Rent)
-                    @OwnHelpers.PropertyNotNull("Forma własności", @Model.Ownership)
-                    @OwnHelpers.PropertyNotNull("Cena za m<sup>2</sup>", @Model.PricePerMeter)
+@if (Model.AdType == AdType.Flat)
+{
+    @Html.Partial("_ShowFlat", Model.Flat)
+}
+else if (Model.AdType == AdType.House)
+{
+    @Html.Partial("_ShowHouse", Model.House)
+}
+else if (Model.AdType == AdType.Land)
+{
+    @Html.Partial("_ShowLand")
+}
 
-                    <div class="list-group-item-warning" style="margin-bottom: 3px; padding-left: 15px">
-                        <div class="row" style="font-size: large">
-                            <div class="col-md-5">Cena:</div>
-                            <div class="col-md-7">@Model.Price</div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-12">
-                <div class="list-group" style="margin-top: 10px; margin-bottom: 0px">
-                    <div class="list-group-item-warning" style="padding-left: 15px">
-                        Galeria
-                    </div>
-                    <div class="col-md-12" style="font-size: small; padding: 10px; border: 2px solid #f39c12">
-                        @{
-                            if (Model.Pictures == null || Model.Pictures.Count == 0)
-                            {
-                                <div style="text-align: center">Brak zdjęć</div>
-                            }
-                            else
-                            {
-                                foreach (var picture in Model.Pictures)
-                                {
-                                    <div class="col-md-2" style="padding-bottom: 10px">
-                                        <img src="/Content/Photos/@picture.Link" style="width: 100%"/>
-                                    </div>
-                                }
-                            }
-                        }
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-12">
-                <div class="list-group" style="margin-top: 10px; margin-bottom: 0px">
-                    <div class="list-group-item-warning" style="padding-left: 15px">
-                        Opis
-                    </div>
-                    <p style="font-size: small; padding: 10px; border: 2px solid #f39c12">
-                        @Model.Description
-                    </p>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-12">
-                <div class="list-group" style="margin-top: 10px; margin-bottom: 0px">
-                    <div class="list-group-item-warning" style="padding-left: 15px">
-                        Szczegóły
-                    </div>
-                    <p style="font-size: small; padding: 10px; border: 2px solid #f39c12">
-                        @Model.Details
-                    </p>
-                </div>
-            </div>
-        </div>
-        @if (Model.Worker != null)
-        {
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="list-group" style="margin-top: 10px">
-                        <div class="list-group-item-warning" style="padding-left: 15px">
-                            Zapytaj
-                        </div>
-                        <div class="col-md-12" style="border: 2px solid #f39c12; padding:10px">
-                            <div class="col-md-6" style="font-size: small; padding-left: 0px">
-                                <b>Ofertę prowadzi:</b>
-                                <div class="row">
-                                    <div class="col-md-4">
-
-                                    </div>
-                                    <div class="col-md-8">
-                                        @Model.Worker.FullName<br />
-                                        tel. 1: @Model.Worker.PhoneFirst<br />
-                                        tel. 2: @Model.Worker.PhoneSecond<br />
-                                        email: @Model.Worker.Email
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-md-6">
-
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        }
-
-    </div>
-</div>
-@*<div>
-        <h4>Mieszkanie</h4>
-        <hr />
-        <dl class="dl-horizontal">
-            <dt>
-                @Html.DisplayNameFor(model => model.Pictures)
-            </dt>
-
-            <dd>
-                @Html.DisplayFor(model => model.Pictures)
-            </dd>
-            <dt>
-                @Html.DisplayNameFor(model => model.Location)
-            </dt>
-
-            <dd>
-                @Html.DisplayFor(model => model.Location)
-            </dd>
-
-            <dt>
-                @Html.DisplayNameFor(model => model.Area)
-            </dt>
-
-            <dd>
-                @Html.DisplayFor(model => model.Area)
-            </dd>
-
-            <dt>
-                @Html.DisplayNameFor(model => model.Storey)
-            </dt>
-
-            <dd>
-                @Html.DisplayFor(model => model.Storey)
-            </dd>
-
-            <dt>
-                @Html.DisplayNameFor(model => model.TechnicalCondition)
-            </dt>
-
-            <dd>
-                @Html.DisplayFor(model => model.TechnicalCondition)
-            </dd>
-
-            <dt>
-                @Html.DisplayNameFor(model => model.Rooms)
-            </dt>
-
-            <dd>
-                @Html.DisplayFor(model => model.Rooms)
-            </dd>
-
-            <dt>
-                @Html.DisplayNameFor(model => model.Heating)
-            </dt>
-
-            <dd>
-                @Html.DisplayFor(model => model.Heating)
-            </dd>
-
-            <dt>
-                @Html.DisplayNameFor(model => model.Rent)
-            </dt>
-
-            <dd>
-                @Html.DisplayFor(model => model.Rent)
-            </dd>
-
-            <dt>
-                @Html.DisplayNameFor(model => model.Ownership)
-            </dt>
-
-            <dd>
-                @Html.DisplayFor(model => model.Ownership)
-            </dd>
-
-            <dt>
-                @Html.DisplayNameFor(model => model.PricePerMeter)
-            </dt>
-
-            <dd>
-                @Html.DisplayFor(model => model.PricePerMeter)
-            </dd>
-
-            <dt>
-                @Html.DisplayNameFor(model => model.ToLet)
-            </dt>
-
-            <dd>
-                @Html.DisplayFor(model => model.ToLet)
-            </dd>
-
-            <dt>
-                @Html.DisplayNameFor(model => model.Title)
-            </dt>
-
-            <dd>
-                @Html.DisplayFor(model => model.Title)
-            </dd>
-
-            <dt>
-                @Html.DisplayNameFor(model => model.Description)
-            </dt>
-
-            <dd>
-                @Html.DisplayFor(model => model.Description)
-            </dd>
-
-            <dt>
-                @Html.DisplayNameFor(model => model.Details)
-            </dt>
-
-            <dd>
-                @Html.DisplayFor(model => model.Details)
-            </dd>
-
-            <dt>
-                @Html.DisplayNameFor(model => model.City)
-            </dt>
-
-            <dd>
-                @Html.DisplayFor(model => model.City)
-            </dd>
-
-            <dt>
-                @Html.DisplayNameFor(model => model.Price)
-            </dt>
-
-            <dd>
-                @Html.DisplayFor(model => model.Price)
-            </dd>
-
-            <dt>
-                @Html.DisplayNameFor(model => model.Visible)
-            </dt>
-
-            <dd>
-                @Html.DisplayFor(model => model.Visible)
-            </dd>
-
-            <dt>
-                @Html.DisplayNameFor(model => model.Deleted)
-            </dt>
-
-            <dd>
-                @Html.DisplayFor(model => model.Deleted)
-            </dd>
-
-            <dt>
-                @Html.DisplayNameFor(model => model.CreatedAt)
-            </dt>
-
-            <dd>
-                @Html.DisplayFor(model => model.CreatedAt)
-            </dd>
-
-        </dl>
-    </div>
-    <p>
-        @Html.ActionLink("Back to List", "Index")
-    </p>*@
