--- a/Developer/Views/Admin/AddWorker.cshtml
+++ b/Developer/Views/Admin/AddWorker.cshtml
@@ -3,25 +3,24 @@
 @{
     ViewBag.Title = "AddWorker";
 }
-
-<h2>Dodaj pracownika</h2>
-<div class="row">
-    <div class="col-md-12">
+<div class="row" style="margin-right: 15px">
+    <div class="col-md-12 custom-left-panel" style="margin-left: 15px">
+        <h2>Dodaj pracownika</h2>
         @using (Html.BeginForm("AddWorker", "Admin", FormMethod.Post, new { enctype = "multipart/form-data" }))
         {
             @Html.AntiForgeryToken()
 
             <div class="form-horizontal">
-                <hr/>
-                @Html.ValidationSummary(true, "", new {@class = "text-danger"})
+                <hr />
+                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                 <div class="col-md-6">
                     <div class="form-group-sm row">
                         <div class="control-label col-md-2" style="font-size: small">
                             Imię
                         </div>
                         <div class="col-md-10" style="margin-bottom: 3px">
-                            @Html.EditorFor(model => model.FirstName, new {htmlAttributes = new {@class = "form-control", @style="max-width: none"}})
-                            @Html.ValidationMessageFor(model => model.FirstName, "", new {@class = "text-danger"})
+                            @Html.EditorFor(model => model.FirstName, new { htmlAttributes = new { @class = "form-control", @style = "max-width: none" } })
+                            @Html.ValidationMessageFor(model => model.FirstName, "", new { @class = "text-danger" })
                         </div>
                     </div>
 
@@ -30,8 +29,8 @@
                             Nazwisko
                         </div>
                         <div class="col-md-10" style="margin-bottom: 3px">
-                            @Html.EditorFor(model => model.LastName, new {htmlAttributes = new {@class = "form-control", @style="max-width: none"}})
-                            @Html.ValidationMessageFor(model => model.LastName, "", new {@class = "text-danger"})
+                            @Html.EditorFor(model => model.LastName, new { htmlAttributes = new { @class = "form-control", @style = "max-width: none" } })
+                            @Html.ValidationMessageFor(model => model.LastName, "", new { @class = "text-danger" })
                         </div>
                     </div>
 
@@ -40,8 +39,8 @@
                             Tel. 1)
                         </div>
                         <div class="col-md-10" style="margin-bottom: 3px">
-                            @Html.EditorFor(model => model.PhoneFirst, new {htmlAttributes = new {@class = "form-control", @style="max-width: none"}})
-                            @Html.ValidationMessageFor(model => model.PhoneFirst, "", new {@class = "text-danger"})
+                            @Html.EditorFor(model => model.PhoneFirst, new { htmlAttributes = new { @class = "form-control", @style = "max-width: none" } })
+                            @Html.ValidationMessageFor(model => model.PhoneFirst, "", new { @class = "text-danger" })
                         </div>
                     </div>
 
@@ -50,8 +49,8 @@
                             Tel. 2)
                         </div>
                         <div class="col-md-10" style="margin-bottom: 3px">
-                            @Html.EditorFor(model => model.PhoneSecond, new {htmlAttributes = new {@class = "form-control", @style="max-width: none"}})
-                            @Html.ValidationMessageFor(model => model.PhoneSecond, "", new {@class = "text-danger"})
+                            @Html.EditorFor(model => model.PhoneSecond, new { htmlAttributes = new { @class = "form-control", @style = "max-width: none" } })
+                            @Html.ValidationMessageFor(model => model.PhoneSecond, "", new { @class = "text-danger" })
                         </div>
                     </div>
 
@@ -60,13 +59,13 @@
                             Email
                         </div>
                         <div class="col-md-10" style="margin-bottom: 3px">
-                            @Html.EditorFor(model => model.Email, new {htmlAttributes = new {@class = "form-control", @style="max-width: none"}})
-                            @Html.ValidationMessageFor(model => model.Email, "", new {@class = "text-danger"})
+                            @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control", @style = "max-width: none" } })
+                            @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
                         </div>
                     </div>
                     <div class="form-group-sm row">
                         <div class="col-md-offset-2 col-md-10">
-                            <input type="submit" value="Dodaj" class="btn btn-sm btn-primary"/>
+                            <input type="submit" value="Dodaj" class="btn btn-sm btn-primary" />
                         </div>
                     </div>
                 </div>
@@ -76,7 +75,7 @@
                             Zdjęcie:
                         </div>
                         <div class="col-md-10" style="margin-bottom: 3px">
-                            <input type="file" class="form-control" id="Photo" name="Photo" style="max-width:none" accept="image/*" />
+                            <input type="file" class="form-control" id="Photo" name="Photo" style="max-width: none" accept="image/*" />
                         </div>
                     </div>
                 </div>
