--- a/Developer/Content/Site.css
+++ b/Developer/Content/Site.css
@@ -16,6 +16,15 @@ textarea {
     max-width: 280px;
 }
 
+
+.custom-head-photo {
+    width: 100%;
+    border: 2px solid #f39c12;
+    border-radius: 10px;
+    box-shadow: 2px 2px 10px rgb(157, 157, 157);
+}
+
+}
 .custom-left-panel {
     border: 1px solid rgb(229, 229, 229);
     padding-bottom: 5px;
