--- a/Developer/Views/Home/_ShowFlat.cshtml
+++ b/Developer/Views/Home/_ShowFlat.cshtml
@@ -20,9 +20,9 @@
                             }
                             else
                             {
-                                <img src="\Content\Photos\@Model.Pictures[0].Link" style="width: 100%" />
+                                <img class="custom-head-photo" src="\Content\Photos\@Model.Pictures[0].Link" />
                             }
-                        }
+}
                     </div>
                 </div>
 
