--- a/Developer/Views/Home/_ShowLand.cshtml
+++ b/Developer/Views/Home/_ShowLand.cshtml
@@ -21,9 +21,9 @@
                             }
                             else
                             {
-                                <img src="\Content\Photos\@Model.Pictures[0].Link" style="width: 100%" />
+                                <img src="\Content\Photos\@Model.Pictures[0].Link" class="custom-head-photo" />
                             }
-                        }
+}
                     </div>
                 </div>
 
