--- a/Developer/Views/Home/_ShowFlat.cshtml
+++ b/Developer/Views/Home/_ShowFlat.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Developer.Helpers
+@using Developer.Models
 @using Developer.Models.EntityModels
 @model Developer.Models.ViewModels.ShowFlat
 
@@ -128,8 +129,8 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-6">
-
+                            <div class="col-md-6" style="border-left: 1px solid #f39c12">
+                                @Html.Partial("_ContactForm", new ContactEmail())
                             </div>
                         </div>
                     </div>
