--- a/Developer/Views/Home/_ShowLand.cshtml
+++ b/Developer/Views/Home/_ShowLand.cshtml
@@ -114,7 +114,10 @@
                                 <b>Ofertę prowadzi:</b>
                                 <div class="row">
                                     <div class="col-md-4">
-
+                                        @if (Model.Worker.HasPhoto)
+                                        {
+                                            <img src="/Content/Photos/Workers/@Model.Worker.Photo" style="width: 100%"/>
+                                        }
                                     </div>
                                     <div class="col-md-8">
                                         @Model.Worker.FullName<br />
