searcher list changes

--- a/Developer/Views/Home/Index.cshtml
+++ b/Developer/Views/Home/Index.cshtml
@@ -93,10 +93,10 @@
                 <div class="col-md-2">
                     <img ng-src="/Content/Photos/{{flat.Picture.Link}}" style="width: 100%"/>
                 </div>
-            <div class="col-md-10" style="word-wrap: break-word">
-                {{flat.Title}}<br>
-                {{flat.Price}},&nbsp{{flat.City}},&nbsp{{flat.Rooms}}<br>
-                {{flat.Description}} 
+            <div class="col-md-10">
+                <b>{{flat.Title}}</b><br>
+                <b>{{flat.Price}}</b>,&nbsp{{flat.City}},&nbsp{{flat.Rooms}}<br>
+                <small>{{flat.Description}}</small> 
             </div>
         </div>
         </li>    
