--- a/Developer/Views/Admin/AddAdvert.cshtml
+++ b/Developer/Views/Admin/AddAdvert.cshtml
@@ -5,7 +5,9 @@
 <link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css"/>
 <div class="row" style="margin-right: 15px">
     <div class="col-md-12 custom-left-panel" style="margin-left: 15px">
-        @Html.EnumDropDownListFor(model => model.AdType, new { @class = "form-control", @style = "max-width:none; border:1px solid green", @id = "AdType" })
+        @Html.Partial("AdminMenu")
+        <h4>Dodaj nieruchomość</h4>
+        @Html.EnumDropDownListFor(model => model.AdType, new {@class = "form-control", @style = "max-width:none; border:1px solid green", @id = "AdType"})
         <div id="flat-form">
             @Html.Partial("_AddFlat", Model.Flat)
         </div>
@@ -21,9 +23,7 @@
 <script language="javascript" src="~/Scripts/angular.js"></script>
 
 <script language="javascript">
-    $("#AdType").on("change", function() {
-        var selectedId = $(this).prop("selectedIndex");
-        var selectedValue = $(this).prop("options")[selectedId].text;
+    function ShowHide(selectedValue) {
         if (selectedValue === "Mieszkanie") {
             $("#home-form").hide();
             $("#land-form").hide();
@@ -37,5 +37,15 @@
             $("#land-form").show();
             $("#flat-form").hide();
         }
-    })
+    }
+
+    $("#AdType").on("change", function() {
+        var selectedId = $(this).prop("selectedIndex");
+        var selectedValue = $(this).prop("options")[selectedId].text;
+        ShowHide(selectedValue);
+    });
+
+    $("#AdType").prop("selectedIndex", @TempData["AdType"]);
+    var selectedValue = $("#AdType").prop("options")[@TempData["AdType"]].text;
+    ShowHide(selectedValue);
 </script>
