--- a/Developer/Views/Admin/Index.cshtml
+++ b/Developer/Views/Admin/Index.cshtml
@@ -1,7 +1,10 @@
-﻿
-@{
+﻿@{
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<div class="row" style="margin-right: 15px">
+    <div class="col-md-12 custom-left-panel" style="margin-left: 15px">
+        @Html.Partial("AdminMenu")
+    </div>
+</div>
 
