--- a/Developer/Views/Home/_ShowFlat.cshtml
+++ b/Developer/Views/Home/_ShowFlat.cshtml
@@ -73,7 +73,7 @@
                                 foreach (var picture in Model.Pictures)
                                 {
                                     <div class="col-md-2" style="padding-bottom: 10px">
-                                        <img src="/Content/Photos/@picture.Link" style="width: 100%" />
+                                        <img src="/Content/Photos/@picture.Link" style="width: 100%; cursor:pointer" class="small-pict"/>
                                     </div>
                                 }
                             }
@@ -143,3 +143,13 @@
 
     </div>
 </div>
+
+
+<script src="/Scripts/jquery-1.10.2.js"></script>
+
+<script language="javascript">
+    $(".small-pict").on("click", function () {
+        var link = $(this).prop("src");
+        $(".custom-head-photo").prop("src", link);
+    });
+</script>
