--- a/Developer/Content/Site.css
+++ b/Developer/Content/Site.css
@@ -1,4 +1,15 @@
-﻿body {
+﻿.grayscale { 
+  -webkit-filter: grayscale(100%);
+  -moz-filter: grayscale(100%);
+  -ms-filter: grayscale(100%);
+  -o-filter: grayscale(100%);
+  filter: grayscale(100%);
+  filter: url(grayscale.svg); /* Firefox 4+ */
+  filter: gray; /* IE 6-9 */
+}
+
+
+body {
     padding-top: 50px;
     padding-bottom: 20px;
 }
