--- a/Developer/Views/Home/Index.cshtml
+++ b/Developer/Views/Home/Index.cshtml
@@ -47,13 +47,16 @@
         <div class="row" style="margin-top: 25px" ng-show="myProperty.value =='flat'">
             <div class="col-md-4">
                 <small>Miejscowość:</small>
-                <select class="form-control input-sm" ng-model="myflatCity" ng-options="city.id as city.City for city in flatList|unique:'City'">
+                <select class="form-control input-sm" ng-model="myflatCity" ng-options="city.City for city in flatList|unique:'City'">
                     <option value="">Wszystkie</option>
                 </select>
+@*                <select class="form-control input-sm" ng-model="myflatCity2" ng-options="city.City for city in uniqueflatList">
+                    <option value="">Wszystkie</option>
+                </select>*@
             </div>
             <div class="col-md-4">
                 <small>Ilość pokoi:</small>
-                <select class="form-control input-sm" ng-model="myflatRoom" ng-options="room.Rooms for room in flatList|unique:'Rooms'">
+                <select class="form-control input-sm" ng-model="myflatRoom" ng-options="room for room in flatList|unique:'Rooms'">
                     <option value="">Każda ilość</option>
                 </select>
             </div>
