--- a/Developer/Views/Home/_ShowHouse.cshtml
+++ b/Developer/Views/Home/_ShowHouse.cshtml
@@ -18,7 +18,7 @@
                         @{
                             if (Model.Pictures == null || Model.Pictures.Count == 0)
                             {
-                                <div style="text-align: center">Brak zdjęć</div>
+                                <img src="/Content/Photos/NoImageAvailable.jpg" style="width:100%" />
                             }
                             else
                             {
@@ -67,7 +67,7 @@
                         @{
                             if (Model.Pictures == null || Model.Pictures.Count == 0)
                             {
-                                <div style="text-align: center">Brak zdjęć</div>
+                                <div style=" text-align:center">Brak zdjęć</div>
                             }
                             else
                             {
