--- a/Developer/Views/Admin/EditFlat.cshtml
+++ b/Developer/Views/Admin/EditFlat.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Developer.Models.EntityModels
-@model Developer.Models.ViewModels.EditHouse
+@model Developer.Models.ViewModels.EditFlat
 
 @if (!ViewData.ModelState.IsValid)
 {
@@ -21,7 +21,7 @@
         </div>
     </div>
 }
-@using (Html.BeginForm("EditHouse", "Admin", FormMethod.Post, new { enctype = "multipart/form-data" }))
+@using (Html.BeginForm("EditFlat", "Admin", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     Html.AntiForgeryToken();
     <div class="form-group-sm">
@@ -49,12 +49,12 @@
                 </div>
                 <div class="row">
                     <div class="col-md-6">
-                        <small>Powierzchnia całkowita:</small>
-                        @Html.EditorFor(model => model.LandArea, new { htmlAttributes = new { @class = "form-control", @style = ((ViewData.ModelState.ContainsKey("Area") && ViewData.ModelState["Area"].Errors.Count > 0) ? ";border: 2px solid red" : "") } })
+                        <small>Powierzchnia:</small>
+                        @Html.EditorFor(model => model.Area, new { htmlAttributes = new { @class = "form-control", @style = ((ViewData.ModelState.ContainsKey("Area") && ViewData.ModelState["Area"].Errors.Count > 0) ? ";border: 2px solid red" : "") } })
                     </div>
                     <div class="col-md-6">
-                        <small>Powierzchnia użytkowa:</small>
-                        @Html.EditorFor(model => model.UsableArea, new { htmlAttributes = new { @class = "form-control", @style = ((ViewData.ModelState.ContainsKey("Storey") && ViewData.ModelState["Storey"].Errors.Count > 0) ? ";border: 2px solid red" : "") } })
+                        <small>Kondygnacja:</small>
+                        @Html.EditorFor(model => model.Storey, new { htmlAttributes = new { @class = "form-control", @style = ((ViewData.ModelState.ContainsKey("Storey") && ViewData.ModelState["Storey"].Errors.Count > 0) ? ";border: 2px solid red" : "") } })
                     </div>
                 </div>
                 <div class="row">
@@ -120,7 +120,7 @@
                             @foreach (var photo in Model.Pictures)
                             {
                                 <div class="col-md-4">
-                                    <img src="/Content/Photos/@photo.Link" style="width: 100%; margin-bottom: 10px" class="existsPhotos" data-id="@photo.Id" />
+                                    <img src="/Content/Photos/@photo.Link" style="width: 100%; margin-bottom: 10px" class="existsPhotos" data-id="@photo.Id"/>
                                 </div>
                             }
                         </div>
